frontend/src/css/sass/pages/_gamepage.scss
#game-page {
    padding: 2rem 0;

    h1 {
        margin-top: 2rem;
        margin-bottom: 0.5rem;
    }

    p {
        color: $black;
    }

    figure {
        margin: 0;

        img {
            width: 100%;
            height: auto;
            object-fit: fill;
            border-radius: $radius;
            box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
        }
    }

    header {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        margin-bottom: 2rem;

        #rating-favourite-section {
            display: flex;
            flex-direction: row;
            align-items: center;
            gap: 0.5rem;
        }
    }

    .rating-tag {
        background-color: $yellow;
        padding: 0.25rem 0.5rem;
        border: 2px solid rgba(0, 0, 0, 0.25);
        border-radius: $radius;
        box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px;
        min-width: fit-content;
    }

    .favourite-button {
        padding: 0.25rem 0.5rem;
        margin: 0;
        border: 2px solid rgba(0, 0, 0, 0.25);
        border-radius: $radius;
        cursor: pointer;
        font-size: 1em;
        box-shadow: rgba(0, 0, 0, 0.15) 0px 1px 2px;
        min-width: fit-content;
    }

    .favourited {
        background-color: $light-red;
    }

    .link-button {
        margin-top: 1rem;
        padding: 0.75rem 1.5rem;
    }
}


@media only screen and (min-width: 800px) {
    #game-page {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
        justify-content: space-between;
        gap: 1rem;

        section {
            flex-basis: calc(50% - 1rem);
        }

        h1 {
            margin: 0;
            margin-bottom: 0.5rem;
        }
    }
}

@media only screen and (min-width: 1100px) {
    #game-page {
        header {
            flex-direction: row;
            align-items: center;
            gap: 1rem;

            h1 {
                
        margin-bottom: 0;
            }
        }
    }
}

